Shared: Components: Table: fix broken in safari

--- a/packages/shared/components/table/table-header/TableHeader.module.scss
+++ b/packages/shared/components/table/table-header/TableHeader.module.scss
@@ -27,7 +27,7 @@
  */
 
 .tableHeader {
-  position: fixed;
+  position: sticky;
   background: var(--background-color);
   display: grid;
   z-index: 1;
@@ -48,10 +48,4 @@
 
 .tableHeaderRow {
   display: contents;
-}
-
-.emptyTableContainer {
-  grid-column-start: 1;
-  grid-column-end: -1;
-  height: 40px;
 }
